--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "@tabler/icons-webfont": "^3.11.0",
+    "eslint": "^9.7.0",
+    "prettier": "^3.3.3"
   }
 }
